--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: TGS Viewer
 description: Play and view Telegram Sticker Files TGS file (.tgs)
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman
