--- a/.github/workflows/linux_build.yml
+++ b/.github/workflows/linux_build.yml
@@ -15,14 +15,17 @@ jobs:
           java-version: '11'
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.0.0'
-
-      - run: flutter pub get
-      - run: flutter build linux --release
+          channel: 'stable'
+          cache: true
+      - run: |
+          sudo apt-get update -y
+          sudo apt-get install -y ninja-build libgtk-3-dev
+      - run: flutter config --enable-linux-desktop
+      - run: flutter build linux
 
       - name: Release Bundle Archive
         uses: actions/upload-artifact@v2
         with:
-          name: Release Bundle Archive
+          name: Release
           path: build/linux/release/bundle/feedity
 
